# trignoclient_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
include/: DataPublisher.hpp  Interface.hpp  bindings.hpp  data_wrapper.hpp  interface_wrapper.hpp  recorder_publisher.hpp  utils.hpp
msg/: BaseInfo.msg  Frame.msg  FrameStamped.msg  Sample.msg  Sensor.msg  SensorInfo.msg
src/: DataPublisher.cpp  Interface.cpp  data_wrapper.cpp  interface_wrapper.cpp  main_node.cpp  recorder_publisher.cpp
srv/: GetSensorInfo.srv  Query.srv  Record.srv
